crates/templates/tests/snapshots/parse_command_arguments_test__impl-14.snap
---
source: crates/templates/tests/parse_command_arguments_test.rs
description: "Parse commands with three positional arguments, three of them required, the last one multiple"
expression: output
---
parse_bar_arguments() {
  while [[ $# -gt 0 ]]; do
    case "${1:-}" in
      -h|--help)
        bar_usage
        exit
        ;;
      *)
        break
        ;;
    esac
  done

  while [[ $# -gt 0 ]]; do
    key="$1"
    case "$key" in
      -?*)
        printf "invalid option: %s\n" "$key" >&2
        exit 1
        ;;
      *)
        if [[ -z ${args['foo']+x} ]]; then
          args['foo']=$key
          shift
        elif [[ -z ${args['bar']+x} ]]; then
          args['bar']=$key
          shift
        elif [[ -z ${args['baz']+x} ]]; then
          args['baz']=$key
          shift
        else
          args['baz']="${args['baz']} \"$key\""
          shift
        fi
        ;;
    esac
  done
}

