crates/templates/tests/snapshots/parse_command_arguments_test__impl-18.snap
---
source: crates/templates/tests/parse_command_arguments_test.rs
description: Parse commands with one flag that uses -h as short
expression: output
---
parse_foo_arguments() {
  while [[ $# -gt 0 ]]; do
    case "${1:-}" in
      -h|--help)
        foo_usage
        exit
        ;;
      *)
        break
        ;;
    esac
  done

  while [[ $# -gt 0 ]]; do
    key="$1"
    case "$key" in
      -h | --host)
        args['--host']=1
        shift
        ;;
      -?*)
        printf "invalid option: %s\n" "$key" >&2
        exit 1
        ;;
      *)
        printf "Invalid argument: %s\n" "$key" >&2
        exit 1
        ;;
    esac
  done
}

