crates/templates/tests/snapshots/parse_command_arguments_test__impl-2.snap
---
source: crates/templates/tests/parse_command_arguments_test.rs
expression: output
---

  action="${1:-}"

  case $action in

    bar)
      action="bar"
      input=("${input[@]:1}")
      ;;
    baz)
      action="baz"
      input=("${input[@]:1}")
      ;;
    foo)
      action="foo"
      input=("${input[@]:1}")
      ;;
    -h | --help)
      usage
      exit
      ;;
    "")
      action="baz"
      ;;
    *)
      action="baz"
      ;;
  esac

